# demyst_optim_prompts

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py
cpp/: count_utils.cpp
infinigram/: indexing.py
ood_prompts/: config.py  utils.py
ood_prompts/analysis/: __init__.py  activation_utils.py  count_corpus_freqs.py  extract_hidden_states.py  get_results_from_dir.py  nlp_utils.py
ood_prompts/train/: gen_prompt_data.py  launch_cloud.py  stories_lm.py  suffix.py  tokenizer_stories.py  twins.py
ood_prompts/train/cloud_config/: 1_gpu_twins_sky.yaml  accelerate_4_gpu.yaml
ood_prompts/train/prompts/: all_prompts.json  alpaca.json  dolly.json  openhermes.json  openwebtext.json  wiki.json
results_data/: pile_corpus_counts_ids.json  probe_results_all_models.json  stories_token_counts_ids.json
results_data/layerwise_kls/: layerwise_kls_Llama-3.1-8B.json  layerwise_kls_Llama-3.2-1B-Instruct.json  layerwise_kls_Llama-3.2-1B.json  layerwise_kls_Llama-3.2-3B-Instruct.json  layerwise_kls_Llama-3.2-3B.json  layerwise_kls_Qwen2.5-0.5B-Instruct.json  layerwise_kls_Qwen2.5-0.5B.json  layerwise_kls_Qwen2.5-1.5B-Instruct.json  layerwise_kls_Qwen2.5-1.5B.json  layerwise_kls_SmolLM2-1.7B-Instruct.json  layerwise_kls_SmolLM2-1.7B.json  layerwise_kls_SmolLM2-135M-Instruct.json  layerwise_kls_SmolLM2-135M.json  layerwise_kls_SmolLM2-360M-Instruct.json  layerwise_kls_SmolLM2-360M.json  layerwise_kls_gemma-2-2b-it.json  layerwise_kls_gemma-2-2b.json  layerwise_kls_pythia-1.4b-deduped.json
