[build-system]
requires = ["setuptools", "setuptools-scm", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "ood_prompts"
version = "0.0.1"
description = ""
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.urls]
"Homepage" = "https://github.com/rimon15/demyst_optim_prompts"

[tool.setuptools]
packages = ["ood_prompts", "ood_prompts.ext"]

[tool.setuptools.package-data]
"ood_prompts.ext" = ["*.so", "*.pyd"]

[tool.ruff]
indent-width = 2
line-length = 100
extend-include = ["*.ipynb"]
target-version = "py310"
respect-gitignore = true

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["E402", "F401", "F722"]

[tool.ruff.lint.pycodestyle]
max-line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
